--- a/trading-dashboard/frontend/stats.html
+++ b/trading-dashboard/frontend/stats.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -111,30 +112,50 @@
 
     <!-- CONTENU DES STATISTIQUES -->
     <main class="flex-1 p-4 md:p-8">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-        <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
-          <h3 class="text-yellow-400 font-semibold mb-2">Capital de départ</h3>
-          <p class="text-2xl font-bold">10 000 €</p>
+        <!-- Première ligne de cartes -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6">
+            <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
+            <h3 class="text-yellow-400 font-semibold mb-2">Capital de départ</h3>
+            <p class="text-2xl font-bold">10 000 €</p>
+            </div>
+            <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
+            <h3 class="text-yellow-400 font-semibold mb-2">Capital actuel</h3>
+            <p class="text-2xl font-bold text-green-400">30 000 €</p>
+            <p class="text-green-400 font-semibold">+200%</p>
+            </div>
+            <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
+            <h3 class="text-yellow-400 font-semibold mb-2">Gain quotidien</h3>
+            <p class="text-2xl font-bold text-green-400">100 €</p>
+            <p class="text-green-400 font-semibold">+1%</p>
+            </div>
         </div>
-        <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
-          <h3 class="text-yellow-400 font-semibold mb-2">Capital actuel</h3>
-          <p class="text-2xl font-bold text-green-400">30 000 €</p>
-          <p class="text-green-400 font-semibold">+200%</p>
-        </div>
-        <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
-          <h3 class="text-yellow-400 font-semibold mb-2">Gain quotidien</h3>
-          <p class="text-2xl font-bold text-green-400">100 €</p>
-          <p class="text-green-400 font-semibold">+1%</p>
-        </div>
-      </div>
 
-      <!-- Ici tu pourras ajouter tes graphiques ou tableaux statistiques -->
-      <div class="mt-8 bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
-        <h3 class="text-yellow-400 font-semibold mb-4">Graphiques et statistiques</h3>
-        <p class="text-gray-300">Contenu à compléter...</p>
-      </div>
+        <!-- Deuxième ligne de cartes -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+            <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
+            <h3 class="text-yellow-400 font-semibold mb-2">Gain Séminaire</h3>
+            <p class="text-2xl font-bold text-green-400">500 €</p>
+            <p class="text-green-400 font-semibold">+5%</p>
+            </div>
+            <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
+            <h3 class="text-yellow-400 font-semibold mb-2">Gain Mensuel</h3>
+            <p class="text-2xl font-bold text-green-400">3 000 €</p>
+            <p class="text-green-400 font-semibold">+30%</p>
+            </div>
+            <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800">
+            <h3 class="text-yellow-400 font-semibold mb-2">Gain Annuel</h3>
+            <p class="text-2xl font-bold text-green-400">36 000 €</p>
+            <p class="text-green-400 font-semibold">+360%</p>
+            </div>
+        </div>
 
+        <!-- Graphique responsive -->
+        <div class="bg-neutral-900 p-6 rounded-2xl shadow-md border border-neutral-800 mt-6 w-full h-64 md:h-96">
+            <h3 class="text-yellow-400 font-semibold mb-4">Évolution du capital</h3>
+            <canvas id="capitalChart" class="w-full h-full"></canvas>
+        </div>
     </main>
+
   </div>
 
   <script>
@@ -198,6 +219,32 @@
       sidebar.classList.toggle('collapsed', !sidebarOpen);
     }
     toggleBtn.addEventListener('click', toggleSidebar);
+
+    // Chart.js responsive
+    const ctx = document.getElementById('capitalChart').getContext('2d');
+    const capitalChart = new Chart(ctx,{
+      type:'line',
+      data:{
+        labels:['Jan','Fév','Mar','Avr','Mai','Juin'],
+        datasets:[{
+          label:'Capital actuel (€)',
+          data:[10000,15000,20000,25000,30000,36000],
+          borderColor:'#FACC15',
+          backgroundColor:'rgba(250,204,21,0.2)',
+          fill:true,
+          tension:0.3
+        }]
+      },
+      options:{
+        responsive:true,
+        maintainAspectRatio:false,
+        plugins:{ legend:{ labels:{ color:'#f5f5f5' } } },
+        scales:{
+          x:{ ticks:{ color:'#f5f5f5' }, grid:{ color:'#222' } },
+          y:{ ticks:{ color:'#f5f5f5' }, grid:{ color:'#222' } }
+        }
+      }
+    });
   </script>
 </body>
 </html>
